--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             margin-left: 30px;
             margin-bottom: 5px;
             list-style: none;
-            text-align: justify;
             font-size: 20px;
             
         }
@@ -58,7 +57,7 @@
         <hr>
             <h1>Jackeline Evellyn</h1>
             <p> &nbsp; Sou formada em Técnico de Informática para Internet pelo CEFET-Divinópolis e pretendo atuar no desenvolvimento de Software.  <br>
-                &nbsp; Já realizei cursos em plataformas como Udemy e Curso em Vídeo para aprimorar meus conhecimentos. Tenho interresse tanto em desenvolvimento, quanto design.  </p>
+                &nbsp; Já realizei cursos em plataformas como Udemy e Curso em Vídeo para aprimorar meus conhecimentos. Tenho interresse tanto em na área de desenvolvimento de software quanto design.  </p>
             <h2> Habilidades</h2>
             <p> HTML, CSS, JavaScript, Jquery, Python, PHP, MySQL e Marketing Digital.</p>
             <h2> Sites</h2>
