--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-align: center;
         }
         #perfil{
-            width: 200px;
+            width: 25%;
             border-radius: 200px;
             text-align: center;
             margin-top: 20px;
