--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
             background: #fff;
             text-align: center;
             margin-top: 30px;
+            margin-bottom: 30px;
             padding: 2% 16%;
+            
             
         }
         .perfil{
             text-align: center;
         }
         #perfil{
-            width: 45%;
+            width: 40%;
             border-radius: 200px;
             text-align: center;
             margin-top: 20px;
