--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
             </div>
         <hr>
             <h1>Jackeline Evellyn</h1>
-            <p> &nbsp; Sou formada em Técnico de Informática para Internet pelo CEFET-Divinópolis e pretendo atuar no desenvolvimento de Software.  <br>
-                &nbsp; Já realizei cursos em plataformas como Udemy e Curso em Vídeo para aprimorar meus conhecimentos. Tenho interresse tanto em na área de desenvolvimento de software quanto design.  </p>
-            <h2> Habilidades</h2>
-            <p> HTML, CSS, JavaScript, Jquery, Python, PHP, MySQL e Marketing Digital.</p>
+            <p>&nbsp; Sou formada em Técnico de Informática para Internet pelo CEFET-Divinópolis, dentre as áreas que obtive conhecimento estão Linguagem de Programação, Redes, Banco de Dados e Gestão e Empreendedorismo. Além disso, tive a oportunidade de ser instruída por um corpo docente qualificado. <br>
+                &nbsp; Atuei como Programadora na empresa Mais Soluções, onde consolidei os conhecimentos técnicos aprendidos no CEFET e adquiri a experiência prática no mercado.   <br>
+                &nbsp; Busco constante aprendizado na área de TI, já realizei cursos em plataformas como Udemy e Curso em Vídeo.  <br>
+                &nbsp; Atualmente busco uma oportunidade como Desenvolvedora ou áreas relacionados. Seja como estagiária ou colaborador. <br>
+                     <h2> Habilidades</h2>
+            <p> HTML, CSS, JavaScript, PHP, Python, MySQL e Marketing Digital.</p>
             <h2> Sites</h2>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/jackelineeteixeira" target="_black">www.linkedin.com/in/jackeline-evellyn</a></li>
-            <li>GitHub: <a href="https://github.com/jackelineeteixeira" target="_black">https://github.com/jackelineeteixeira</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/jackelineeteixeira" target="_black">linkedin.com/in/jackeline-evellyn</a></li>
+            <li>GitHub: <a href="https://github.com/jackelineeteixeira" target="_black">github.com/jackelineeteixeira</a></li>
         </div>
     </div>
 
