Atualização do link do Github

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             <h1>Jackeline Evellyn</h1>
             <p>&nbsp; Sou formada em Técnico de Informática para Internet pelo CEFET-Divinópolis, dentre as áreas que obtive conhecimento estão Linguagem de Programação, Redes, Banco de Dados e Gestão e Empreendedorismo. Além disso, tive a oportunidade de ser instruída por um corpo docente qualificado. <br>
                 &nbsp; Atuei como Programadora na empresa Mais Soluções, onde consolidei os conhecimentos técnicos aprendidos no CEFET e adquiri a experiência prática no mercado.   <br>
-                &nbsp; Busco constante aprendizado na área de TI, já realizei cursos em plataformas como Udemy e Curso em Vídeo.  <br>
-                &nbsp; Atualmente busco uma oportunidade como Desenvolvedora ou áreas relacionados. Seja como estagiária ou colaborador. <br>
+                &nbsp; Busco constante evolução na área de TI, já realizei cursos em plataformas como Udemy e Curso em Vídeo.  <br>
+                &nbsp; Atualmente busco uma oportunidade como Desenvolvedora ou áreas relacionados. Seja como estagiária ou colaboradora. <br>
                      <h2> Habilidades</h2>
             <p> HTML, CSS, JavaScript, PHP, Python, MySQL e Marketing Digital.</p>
             <h2> Sites</h2>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/jackelineeteixeira" target="_black">linkedin.com/in/jackeline-evellyn</a></li>
-            <li>GitHub: <a href="https://github.com/jackelineeteixeira" target="_black">github.com/jackelineeteixeira</a></li>
+            <li>GitHub: <a href="https://github.com/jackeline-evellyn" target="_black">github.com/jackeline-evellyn</a></li>
         </div>
     </div>
 
